# backend/src/CoffeeTracker.Api/Endpoints/BeanEndpoints.cs
@@ -86,7 +86,7 @@ public static class BeanEndpoints
                 request.Name,
                 request.RoasterId,
                 request.OriginType,
-                request.OriginCountries,
+                request.OriginCountryIds,
                 request.Variety,
                 request.ProcessingMethod,
                 request.RoastProfile,
@@ -118,7 +118,7 @@ public static class BeanEndpoints
                 request.Name,
                 request.RoasterId,
                 request.OriginType,
-                request.OriginCountries,
+                request.OriginCountryIds,
                 request.Variety,
                 request.ProcessingMethod,
                 request.RoastProfile,
